# TOPproject

./: .gitignore  CMakeLists.txt  README.md  config1.text
benchmarks/: generate-data.sh  index.txt
benchmarks/TOP-project 3/: CMakeLists.txt
benchmarks/TOP-project 3/src/: CMakeLists.txt  main.c
benchmarks/dataset/: config_1000_.txt  config_100_.txt  config_300_.txt  config_400_.txt  config_500_.txt  config_600_.txt  config_800_.txt  config_900_.txt
benchmarks/non-optimised/linux-X86-64/: perf.data.old  perf_stat_nonoptimised.txt  result-non_optimised-x86_64.txt  top-stencil
benchmarks/non-optimised/macos-m1/: result-non_optimised-1-noflag.txt  result-non_optimised-1.txt  result-non_optimised-2.txt
benchmarks/opt_1/TOP-project-1/: CMakeLists.txt
benchmarks/optimised-1/linux-X86-64/: result-optimised-1-x86_64.txt
benchmarks/optimised-1/macos-m1/: result-optimised-1-ofast.txt  top-stencil
benchmarks/optimised-2/linux_X86-64/: result-optimised-2-x86_64.txt  top-stencil
benchmarks/optimised-2/macos-m1/: result-optimised-2-ofast.txt
benchmarks/optimised-3/linux-X86-64/: result-optimised-3-x86_64.txt
benchmarks/optimised-3/macos-m1/: result-optimised-3-ofast.txt
benchmarks/optimised-4/linux-X86-64/: perf.data  result-optimised-4-x86_64.txt  top-stencil
benchmarks/optimised-4/macos-m1/: result-optimised-4-ofast.txt  top-stencil
benchmarks/optimised-5/linux-X86-64/: config.lua  perf.data  (+3 more)
draft/: optimisations.txt
include/stencil/: comm_handler.h  mesh.h  solve.h
src/: CMakeLists.txt  main.c
src/stencil/: comm_handler.c  init.c  mesh.c  solve.c
(+18 files in other folders)
